--- a/R12-01-Rot-Linked-list-iterativa-ordenada-environment/pom.xml
+++ b/R12-01-Rot-Linked-list-iterativa-ordenada-environment/pom.xml
@@ -34,8 +34,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.3</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -82,9 +82,9 @@
 							<goal>compact</goal>
 						</goals>
 						<configuration>
-							<matricula>INSIRA NEU NUMERO DE MATRICULA</matricula>
+							<matricula>115111170</matricula>
 							<semestre>2016.1</semestre>
-							<roteiro>R0X-0X</roteiro>
+							<roteiro>R12-01</roteiro>
 							<url>http://web.cloud.lsd.ufcg.edu.br:44174/submission/submitRoteiro</url>
 						</configuration>
 					</execution>
